[package]
name = "bee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voyager = "0.1"
anyhow = "1.0"
reqwest = "0.11"
futures = "0.3"
rod = "0.2.3"

[dependencies.tokio]
version = "1.0"
features = ["full"]
